--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -5,12 +5,12 @@ body, html, #root, .app, .container {
 
 .container {
     font-size: 28px;
-    color: #fff;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #0a1b3d;
+    background-color: #ffffff;
 }
 
 .loginForm {
@@ -41,6 +41,7 @@ body, html, #root, .app, .container {
 
 .submitButton {
     padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .btn {
@@ -63,4 +64,10 @@ body, html, #root, .app, .container {
 .errorMessage {
     color: red;
     font-size: 10px;
+}
+
+.wrapper {
+    background-color: #5050c1;
+    padding: 15px;
+    border-radius: 10px;
 }
