--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -15,7 +15,7 @@ body, html, #root, .app, .container {
 
 .wrapper {
     background: rgb(50, 54, 74);
-    padding: 15px;
+    padding: 20px;
     min-width: 280px;
     min-height: 500px;
 }
@@ -32,8 +32,8 @@ body, html, #root, .app, .container {
     width: 100%;
     text-align: center;
     max-width: 400px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .inputField {
@@ -47,7 +47,6 @@ body, html, #root, .app, .container {
 .input {
     box-sizing: border-box;
     outline: none;
-    border: solid 1px #818d98;
     color: #ffffff;
     width: 100%;
     padding: 12px;
@@ -76,4 +75,12 @@ body, html, #root, .app, .container {
 .btn:hover {
     background: #be2f7a;
     color: rgb(50, 54, 74);
+}
+
+.redir {
+    color: rgb(58, 70, 112);
+    font-size: small;
+    text-decoration: underline;
+    cursor: pointer;
+    padding: 5px;
 }
