Sending login data to backend. Displaying error response.

--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -84,3 +84,8 @@ body, html, #root, .app, .container {
     cursor: pointer;
     padding: 5px;
 }
+
+.errorMsg {
+    color: #d25656;
+    font-size: medium;
+}
